# vip-hello-world

./: README.md  package.xml  setup.cfg  setup.py
launch/: VIP-Hello-World.launch.py
src/: control_node.py  processing_node.py  zed_camera_node.py
src/vip-hello-world/: package.xml  setup.cfg  setup.py
