<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>VIP-Hello-World</name>
  <version>0.0.0</version>
  <description>ROS2 package for color-based F1TENTH car control</description>
  <maintainer email="achen694@gatech.edu">Alex Chen</maintainer>
  <license>TODO: License declaration</license>

  <!-- <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-scipy</exec_depend> -->

  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>